Made full-website widget renamable.
User can now rename full website widget.

--- a/config/widget_meta.yml
+++ b/config/widget_meta.yml
@@ -44,7 +44,7 @@ informed::keep-me-informed:
   canRename: true
   canEditIcon: false
 link::full-website:
-  canRename: false
+  canRename: true
   canEditIcon: false
 link_fb::flickr:
   canRename: true
