Added rss widget to builder. Addresses #192

--- a/config/widget_meta.yml
+++ b/config/widget_meta.yml
@@ -88,3 +88,6 @@ link::blog:
 custom_page::about-us:
   canRename: true
   canEditIcon: false
+rss::rss-feed:
+  canRename: true
+  canEditIcon: true
