Made full-website widget editable and non-singleton

--- a/config/widget_meta.yml
+++ b/config/widget_meta.yml
@@ -45,7 +45,7 @@ informed::keep-me-informed:
   canEditIcon: false
 link::full-website:
   canRename: true
-  canEditIcon: false
+  canEditIcon: true
 link_fb::flickr:
   canRename: true
   canEditIcon: false
