--- a/config/typus/20110530211325_application.yml
+++ b/config/typus/20110530211325_application.yml
@@ -14,8 +14,8 @@ Carrier:
 
 Company:
   fields:
-    default: user, name, db_name, id_counter, logo_file_name
-    form: premium, user, name, db_name, id_counter, informed_email, leave_msg_email, booking_email, call_back_email
+    default: db_name, name, user, logo_file_name
+    form: premium, manual_expire_date, user, name, db_name, id_counter, informed_email, leave_msg_email, booking_email, call_back_email
   order_by:
   relationships: followers, user
   filters: created_at
